--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,3 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
@@ -23,10 +22,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4 # Upgrade to latest version
+        uses: actions/checkout@v4 # Updated to latest
 
-      - name: Set up Node
-        uses: actions/setup-node@v4 # Upgrade to latest version
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
@@ -38,13 +37,14 @@ jobs:
         run: npm run build
 
       - name: Setup Pages
-        uses: actions/configure-pages@v4 # Upgrade to latest version
+        uses: actions/configure-pages@v4
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2 # Ensure v2 is used
+      - name: Upload artifact (using v4)
+        uses: actions/upload-artifact@v4 # Force upgrade to v4
         with:
+          name: github-pages
           path: './dist'
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2 # Upgrade to v2
+        uses: actions/deploy-pages@v2
