--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "clsx": "^2.1.1",
     "gh-pages": "^6.3.0",
     "react": "^18.3.1",
